--- a/index.html
+++ b/index.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html lang="de"></html>
-
+<!doctype html>
+<html lang="de">
 <head>
-    <title>Portfolio Website</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="./style.css">
-    <link rel="icon" type="image/png" href="./bilder/index/schwarz-10.svg">
-    <script>
-        function onScroll() {
-            for (letter of document.querySelectorAll(".scroll-in img")) {
-                const top = letter.getBoundingClientRect().top;
-                if (top < 0) {
-                    letter.style.position = "sticky";
-                }
-            }
-        }
-    </script>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
+
+    <title>Portfolio</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
