--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Portfolio</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="assets/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body class="home-page">
 
