--- a/gallery.html
+++ b/gallery.html
@@ -61,10 +61,10 @@
                 <img class="d-block w-100" src="images/Produkt_03.Gruppe18.jpg" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="Produkt_04.Gruppe18.jpg" alt="Fourth slide">
+                <img class="d-block w-100" src="./images/Produkt_04.Gruppe18.jpg" alt="Fourth slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="Unternehmen_01.Gruppe18 (1).jpg" alt="Fifth slide">
+                <img class="d-block w-100" src="./images/Unternehmen_01.Gruppe18 (1).jpg" alt="Fifth slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
